[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naptan"
description = "Python package to quickly and easily get public transport access node data from the UK's NaPTAN API."
authors = [{name = "Callum Mullins", email = "mullinscr@gmail.com"}]
readme = "README.md"
requires-python = ">=3"
keywords = ["NaPTAN", "NPTG", "DfT", "Bus", "Transport", "Public Transport", "Stop", "Traveline", "ATCO"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
        "typing; python_version < '3.5'",
        "pandas",
        "requests",
        "folium>=0.9.0",
        "pyproj>=2.0.0"
]
dynamic = ["version"]

[project.urls]
homepage = "https://mullinscr.github.io/naptan/"
documentation = "https://mullinscr.github.io/naptan/"
repository = "https://github.com/mullinscr/naptan"

[project.optional-dependencies]
dev = ["pytest", "importlib_resources"]

[tool.hatch.version]
path = "naptan/__init__.py"